# flow-rag-chatbot

./: .gitignore  Onboarding Training - Creating a Chatbot - Developer Track.txt  README.md  docker-compose.yml  openai.chat.txt  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: chat.py  conversations.py  documents.py  health.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  conversation.py
backend/app/schemas/: chat.py  conversation.py  document.py
backend/app/services/: chat_service.py  conversation_service.py  document_ingestion.py  document_loader.py  embedding_store.py  flow_client.py  rag_pipeline.py  task_queue.py
backend/app/worker/: main.py  tasks.py
backend/tests/: conftest.py
backend/tests/api/: test_chat.py  test_conversations.py  test_documents.py  test_health.py
docs/: api-reference.md  architecture.md  demo-script.md  deployment-guide.md  feature-checklist.md  operations-runbook.md  requirements-coverage.md  test-scenarios.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx  types.d.ts  types.ts
frontend/src/components/: ChatHeader.tsx  ChatThread.tsx  ConversationSidebar.tsx  DocumentUploader.tsx  MessageComposer.tsx  NicknameGate.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts
frontend/src/pages/: App.tsx
(+4 files in other folders)
