[project]
name = "flow-rag-backend"
version = "0.1.0"
description = "FastAPI backend for the Flow RAG chatbot"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Flow Chatbot Team" }]
dependencies = [
    "fastapi>=0.112.0,<0.115.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "httpx>=0.27.0,<0.28.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "langchain>=0.2.5,<0.3.0",
    "langchain-community>=0.2.5,<0.3.0",
    "numpy>=1.24.0,<3.0.0",
    "sentence-transformers>=2.7.0,<3.0.0",
    "redis>=5.0.4,<6.0.0",
    "rq>=1.16.1,<2.0.0",
    "sqlmodel>=0.0.21,<0.0.22",
    "psycopg[binary]>=3.1.18,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-asyncio>=0.23.7,<0.24.0",
    "ruff>=0.4.5,<0.5.0",
    "mypy>=1.10.0,<1.11.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra --cov=app --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "B", "UP", "SIM", "ASYNC"]
ignore = []
